--- a/src/sass/_basics.scss
+++ b/src/sass/_basics.scss
@@ -44,9 +44,10 @@ button {
 .btn {
   display: block;
   border: none;
+  // margin-top: 30px;
   border-radius: 5px;
-  max-width: 200px;
-  height: 30px;
+  max-width: 300px;
+  height: 40px;
   font-family: 'Noto Sans Display', sans-serif;
   background-color: white;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
