--- a/src/sass/_gallery-cards.scss
+++ b/src/sass/_gallery-cards.scss
@@ -8,16 +8,17 @@
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  // margin-left: -30px;
+  // margin-top: -30px;
   align-items: center;
-  flex-basis: calc((100% - 90px) / 3);
+  // flex-basis: calc((100% - 60px) / 3);
+  padding-bottom: 20px;
 }
 .photo-card {
   display: flex;
   flex-direction: column;
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-top: 30px;
   width: 340px;
   border-radius: 5px;
   background-color: #afeeee;
