--- a/src/sass/_basics.scss
+++ b/src/sass/_basics.scss
@@ -44,7 +44,7 @@ button {
 .btn {
   display: block;
   border: none;
-  // margin-top: 30px;
+  margin-bottom: 30px;
   border-radius: 5px;
   max-width: 300px;
   height: 40px;
