--- a/src/sass/_gallery-cards.scss
+++ b/src/sass/_gallery-cards.scss
@@ -11,7 +11,8 @@
   // margin-left: -30px;
   // margin-top: -30px;
   align-items: center;
-  // flex-basis: calc((100% - 60px) / 3);
+  justify-content: center;
+  flex-basis: calc((100% - 60px) / 3);
   padding-bottom: 20px;
 }
 .photo-card {
